--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask==2.1.2
 imutils==0.5.4
 joblib==1.1.0
 matplotlib==3.4.3
-numpy>=1.21.2
+numpy==1.21.5
 opencv_python==4.5.3.56
 plotly==5.7.0
 scikit_learn==1.1.2
