--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,9 @@ gunicorn==19.9.0
 Flask==2.1.2
 imutils==0.5.4
 joblib==1.1.0
-matplotlib==3.4.3
-numpy==1.21.5
+dj-database-url==1.0.0
+numpy==1.21.2
 opencv_python==4.5.3.56
-plotly==5.7.0
 scikit_learn==1.1.2
-tensorflow==2.9.1
+tensorflow-cpu==2.9.1
 Werkzeug==2.1.2
