--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ joblib==1.1.0
 matplotlib==3.4.3
 numpy==1.21.5
 opencv_python==4.5.3.56
-plotly==5.7.0
+whitenoise==6.2.0
 scikit_learn==1.1.2
 tensorflow==2.9.1
 Werkzeug==2.1.2
